# ccc

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  ImportStdumpSymbolsIntoGhidra.java  LICENSE  License.txt  Makefile  README.md  demangle.cpp  depgraph.cpp  musl.cmake  objdump.cpp  run_test.sh  stdump.cpp  tests.cpp  uncc.cpp
.github/workflows/: Release.yml  cmake.yml  release.yml  test.yml  unstable.yml
ccc/: analysis.cpp  analysis.h  ast.cpp  ast.h  ccc.h  command_line.cpp  command_line.h  coredata.h  data_refinement.cpp  data_refinement.h  dependency.cpp  dependency.h  elf.cpp  elf.h  insn.cpp  insn.h  ir.cpp  ir.h  mdebug.cpp  mdebug.h  mdebug_analysis.cpp  mdebug_analysis.h  module.cpp  module.h  old_ast.cpp  old_ast.h  old_print.cpp  old_print.h  opcodes.h  print.cpp  print.h  print_c.cpp  print_c.h  print_cpp.cpp  print_cpp.h  print_ghidra.cpp  print_ghidra.h  print_json.cpp  print_json.h  printc.cpp  (+14 more)
cmake/: git_tag.cpp  release_crafter.cmake  version_finder.cmake  zip_crafter.cmake
demangle/: CMakeLists.txt
demanglegnu/: CMakeLists.txt  README
docs/: CompilerBugs.md  ErrorHandling.md  JsonFormat.md  LibraryOverview.md  Mdebug.ps  ProjectStructure.md  StabsNotes.md  SymbolDatabase.md
docs/mirror/: STABS.html  ThirdEyeSoftwareAndTheMIPSSymbolTable.html  mips_eabi.txt  stabs.html
ghidra_scripts/: CCCDecompileAllFunctions.java
platform/: file.cpp  file.h
src/: ccc.manifest  demangle.cpp  fuzztest.cpp  objdump.cpp  stdump.cpp  tests.cpp  uncc.cpp
src/ccc/: ast.cpp  ast.h  ast_json.cpp  ast_json.h  ccc.h  data_refinement.cpp  data_refinement.h  dependency.cpp  dependency.h  dwarf_attributes.cpp  dwarf_attributes.h  dwarf_forge.cpp  dwarf_forge.h  dwarf_importer.cpp  dwarf_importer.h  dwarf_printer.cpp  dwarf_printer.h  dwarf_section.cpp  dwarf_section.h  dwarf_to_ast.cpp  dwarf_to_ast.h  elf.cpp  elf.h  elf_symtab.cpp  elf_symtab.h  importer_flags.cpp  importer_flags.h  insn.cpp  insn.h  int128.cpp  int128.h  mdebug.cpp  mdebug.h  mdebug_analysis.cpp  mdebug_analysis.h  mdebug_importer.cpp  mdebug_importer.h  mdebug_section.cpp  mdebug_section.h  mdebug_symbols.cpp  (+29 more)
src/mips/: insn.cpp  insn.h  opcodes.h  tables.cpp
src/platform/: file.cpp  file.h
src/test/: symbol_database_tests.cpp
test/: collision_tests.cpp  demangler_tests.cpp  simple.cpp  simple.elf
test/ccc/: dwarf_importer_tests.cpp  elf_tests.cpp  int128_tests.cpp  mdebug_importer_tests.cpp  stabs_tests.cpp  symbol_database_tests.cpp  util_tests.cpp
testdata/: README.md  bitfields.cpp  bitfields.elf  bugs.cpp  bugs.elf  operators.cpp  operators.elf  simple.cpp
